@@ -1,3 +1,8 @@
+2007-07-02  Dan Williams  <dcbw@redhat.com>
+
+	* src/nm-device-802-11-mesh-olpc.c
+		- Clean up output of unhandled mesh stage error messages
+
 2007-06-28  Dan Williams  <dcbw@redhat.com>
 
 	Get rid of dhcdbd, based on a patch from Robert Frank.  Drive dhclient
